@@ -35,7 +35,9 @@ export(route)
 export(routeQueryCheck)
 export(theme_inset)
 export(theme_nothing)
+export(trek)
 import(RgoogleMaps)
+import(bitops)
 import(geosphere)
 import(ggplot2)
 import(jpeg)
