@@ -1,5 +1,5 @@
 #' @import ggplot2 proto RgoogleMaps png plyr reshape2 rjson mapproj
-#'   jpeg geosphere
+#'   jpeg geosphere bitops
 #' @docType package
 #' @name ggmap
 #' @importFrom grDevices as.raster extendrange gray rgb
