@@ -64,7 +64,6 @@ routeQueryCheck()
 
 
 
-
 }
 
 }
@@ -73,7 +72,7 @@ David Kahle \email{david.kahle@gmail.com}
 }
 \seealso{
 \url{https://developers.google.com/maps/documentation/directions/},
-\code{\link{legs2route}}, \code{\link{routeQueryCheck}},
-\code{\link{geom_leg}}
+\code{\link{trek}}, \code{\link{legs2route}},
+\code{\link{routeQueryCheck}}, \code{\link{geom_leg}}
 }
 
